src/objects/Expert__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_a_Healthcare_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be ticked if this KOL is not a healthcare professional and therefor not part of/included in the Fair Market Value (FMV) regulations. If this is ticked contracts etc. will not enforce a specific payment range.</description>
        <inlineHelpText>Tick this checkbox if the KOL is not a Healthcare Professional and therefor not part of FMV regulations.</inlineHelpText>
        <label>Not a Healthcare Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orthodontics_Specialties__c</fullName>
        <inlineHelpText>Select the specialties for Orthodontics SBU</inlineHelpText>
        <label>Orthodontics Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spacefile</fullName>
                </value>
                <value>
                    <fullName>Adhesives</fullName>
                </value>
                <value>
                    <fullName>Cerec Ortho</fullName>
                </value>
                <value>
                    <fullName>Omnicam</fullName>
                </value>
                <value>
                    <fullName>CCO System</fullName>
                </value>
                <value>
                    <fullName>SureSmile Aligners</fullName>
                </value>
                <value>
                    <fullName>SureSmile IDB</fullName>
                </value>
                <value>
                    <fullName>SureSmile Wires</fullName>
                </value>
                <value>
                    <fullName>Essix Plastics</fullName>
                </value>
                <value>
                    <fullName>Drufomat</fullName>
                </value>
                <value>
                    <fullName>InOvation Brackets (R, X &amp; C)</fullName>
                </value>
                <value>
                    <fullName>In-Ovation X</fullName>
                </value>
                <value>
                    <fullName>All Twin Brackets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Contact_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the Main Owner of the KOL.</inlineHelpText>
        <label>KOL Information Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Director_Practice_Consulting_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Owner/director of a dental practice, clinic, or consulting company.</inlineHelpText>
        <label>Owner/Director Practice, Consulting Co.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Practice_Tier3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Owner/director of a dental practice or clinic, lab or consulting company.</inlineHelpText>
        <label>Owner/Director Practice, Lab, Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_dental_company_Tier2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Owner/director of a dental practice, clinic, lab or consulting company</inlineHelpText>
        <label>Owner/Director Practice, Lab, Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>President_or_member_of_a_board_of_direct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>President or member of a board of directors of a recognized professional organization or association. Present to Past 10 years.</inlineHelpText>
        <label>President or member of a board of direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preventive_Specialties__c</fullName>
        <inlineHelpText>Select the specialties for Preventive SBU</inlineHelpText>
        <label>Preventive Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anestethics</fullName>
                </value>
                <value>
                    <fullName>Prophy_Perio</fullName>
                    <label>Prophy/Perio</label>
                </value>
                <value>
                    <fullName>Infection Control</fullName>
                </value>
                <value>
                    <fullName>treatments</fullName>
                    <label>Treatments</label>
                </value>
                <value>
                    <fullName>Scaling</fullName>
                </value>
                <value>
                    <fullName>X-Ray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_SBU__c</fullName>
        <label>Primary SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
                <value>
                    <fullName>Zhermack</fullName>
                </value>
                <value>
                    <fullName>VDW</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Evaluator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Evaluator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profession_Group__c</fullName>
        <formula>CASE(Profession__c, &quot;Oral and Maxillofacial Surgeon&quot;, &quot;Specialty Group 4&quot;,
&quot;Oral and Maxillofacial Pathology&quot;, &quot;Specialty Group 3&quot;,
&quot;Orthodontist&quot;,&quot;Specialty Group 3&quot;,
&quot;Oral and Maxillofacial Radiology&quot;,&quot;Specialty Group 3&quot;,
&quot;Implantologist&quot;,CASE(Contact__r.Account.Country__c, &quot;TR&quot;,&quot;Specialty Group 4&quot;, &quot;PL&quot;,&quot;Specialty Group 4&quot;, &quot;HR&quot;, &quot;Specialty Group 4&quot;, &quot;HU&quot;, &quot;Specialty Group 4&quot;, &quot;CZ&quot;, &quot;Specialty Group 4&quot;, &quot;Specialty Group 2&quot;),
&quot;Special Care Dentistry&quot;,&quot;Specialty Group 2&quot;,
&quot;Prosthodontist&quot;,&quot;Specialty Group 2&quot;,
&quot;Periodontist&quot;,&quot;Specialty Group 2&quot;,
&quot;Geriatric Dentist&quot;,&quot;Specialty Group 2&quot;,
&quot;Forensic Dentistry&quot;,&quot;Specialty Group 2&quot;,
&quot;Forensic Odontology&quot;,&quot;Specialty Group 2&quot;,
&quot;Dental Anesthesiology&quot;,&quot;Specialty Group 2&quot;,
&quot;Public Health Dentist&quot;,&quot;Specialty Group 2&quot;,
&quot;Preventitive Dentist&quot;,&quot;Specialty Group 2&quot;,
&quot;Infection Control Specialist&quot;,&quot;Specialty Group 2&quot;,
&quot;Pediatric Dentist&quot;,&quot;Specialty Group 2&quot;,
&quot;Endodontist&quot;,&quot;Specialty Group 2&quot;,
&quot;General Dentist&quot;,&quot;Specialty Group 1&quot;,
&quot;Laboratory Owner/Upper Level Management&quot;,&quot;Support Group 4&quot;,
&quot;Dental Hygienist&quot;,&quot;Support Group 3&quot;,
&quot;Oral Biologist&quot;,&quot;Support Group 3&quot;,
&quot;Oral Microbiologist&quot;,&quot;Support Group 3&quot;,
&quot;Dental Scientist&quot;,&quot;Support Group 3&quot;,
&quot;Office Manager/Practice Administrator&quot;,&quot;Support Group 2&quot;,
&quot;Oral Medicine Specialist&quot;,&quot;Support Group 2&quot;,
&quot;Laboratory Technician&quot;,&quot;Support Group 1&quot;,
&quot;Dental Assistant&quot;,&quot;Support Group 1&quot;,
&quot;Non-Healthcare Provider&quot;, &quot;Non-Healthcare Provider&quot;,
&quot;No Profession Added&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please note that this field is set based on the data in the Profession (KOL) field on the related Contact</inlineHelpText>
        <label>Profession Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <description>Used by Clinical Affairs - also included in some logic for the Fair Market Value calculations so needed a sepaareta list. Ultimate solution would be to merge this with global profession/contcat subtype valueas.</description>
        <inlineHelpText>Add the profession of the KOL</inlineHelpText>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Dentist</fullName>
                </value>
                <value>
                    <fullName>Dental Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Geriatric Dentist</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Special Care Dentistry</fullName>
                </value>
                <value>
                    <fullName>Implantologist</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxilllofacial Pathology</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Radiology</fullName>
                </value>
                <value>
                    <fullName>Oral and Maxillofacial Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Laboratory Technician</fullName>
                </value>
                <value>
                    <fullName>Dental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Oral Medicine Specialist</fullName>
                </value>
                <value>
                    <fullName>Office Manager/Practice Administrator</fullName>
                </value>
                <value>
                    <fullName>Oral Biologist</fullName>
                </value>
                <value>
                    <fullName>Oral Microbiologist</fullName>
                </value>
                <value>
                    <fullName>Dental Scientist</fullName>
                </value>
                <value>
                    <fullName>Public Health Dentist</fullName>
                </value>
                <value>
                    <fullName>Preventive Dentist</fullName>
                </value>
                <value>
                    <fullName>Infection Control Specialist</fullName>
                </value>
                <value>
                    <fullName>Forensic Dentistry</fullName>
                </value>
                <value>
                    <fullName>Forensic Odontology</fullName>
                </value>
                <value>
                    <fullName>Laboratory Owner/Upper Level Management</fullName>
                </value>
                <value>
                    <fullName>Non-Healthcare Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professor_Assoc_Professor_at_distinguish__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Professor/Assoc Professor, Dean, Associate Dean or Dept. Chair at a college or university or dental school or dental program that is accredited by an independent agency such as the Commission on Dental Accreditation (CODA)</inlineHelpText>
        <label>Professor at university</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prosthetics_Specialties__c</fullName>
        <inlineHelpText>Select the specialties for Lab SBU</inlineHelpText>
        <label>Lab Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acrylics</fullName>
                </value>
                <value>
                    <fullName>All Ceramics</fullName>
                </value>
                <value>
                    <fullName>Removables</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM Equipment</fullName>
                </value>
                <value>
                    <fullName>Traditional Workflows</fullName>
                </value>
                <value>
                    <fullName>Alloys</fullName>
                </value>
                <value>
                    <fullName>Celtra</fullName>
                </value>
                <value>
                    <fullName>Cercon</fullName>
                </value>
                <value>
                    <fullName>Ceramco 3</fullName>
                </value>
                <value>
                    <fullName>Kiss</fullName>
                </value>
                <value>
                    <fullName>Celtra Ceram</fullName>
                </value>
                <value>
                    <fullName>Stain &amp; Glaze</fullName>
                </value>
                <value>
                    <fullName>Veneering</fullName>
                </value>
                <value>
                    <fullName>Crown &amp; Bridges</fullName>
                </value>
                <value>
                    <fullName>Veneers</fullName>
                </value>
                <value>
                    <fullName>TruExpression</fullName>
                </value>
                <value>
                    <fullName>TruByte</fullName>
                </value>
                <value>
                    <fullName>Veroform</fullName>
                </value>
                <value>
                    <fullName>Genios</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>VIPI</fullName>
                </value>
                <value>
                    <fullName>Denture Types</fullName>
                </value>
                <value>
                    <fullName>Tooth set-up/ occlusion concepts</fullName>
                </value>
                <value>
                    <fullName>Denture esthetics (individualization)</fullName>
                </value>
                <value>
                    <fullName>Hipa</fullName>
                </value>
                <value>
                    <fullName>Lucitone 199</fullName>
                </value>
                <value>
                    <fullName>Flash Veneers (TBD)</fullName>
                </value>
                <value>
                    <fullName>Vitallium</fullName>
                </value>
                <value>
                    <fullName>Digital Dentures</fullName>
                </value>
                <value>
                    <fullName>Scanner inEos X5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Published_2_5_articles_in_past_10_years__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>2-5 Scientific Books, Textbook Chapters and/or Articles Published in last 10 Years in Peer-Reviewed or other Dental or Lab Tech Journals</inlineHelpText>
        <label>Published 2-5 articles in past 10 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_6_in_peer_reviewed_or_Lab_Te__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>6 or more Scientific Books, Textbook Chapters and/or Articles Published in last 10 Years in Peer-Reviewed or other Dental or Lab Tech Journals</inlineHelpText>
        <label>Published 6+ in peer reviewed journals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Researcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_of_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Responsible for the education of residents/students. Decision maker of influencer in terms of curriculum content and materials supplies used as part of educational program.</inlineHelpText>
        <label>Responsible of Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restorative__c</fullName>
        <inlineHelpText>Select the specialties for Restorative SBU</inlineHelpText>
        <label>Restorative</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Impression Materials</fullName>
                </value>
                <value>
                    <fullName>Composites</fullName>
                </value>
                <value>
                    <fullName>Bonding</fullName>
                </value>
                <value>
                    <fullName>Temporary Materials</fullName>
                </value>
                <value>
                    <fullName>Cements</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Finishing &amp; Polishing</fullName>
                </value>
                <value>
                    <fullName>Burs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondarySBU__c</fullName>
        <label>Secondary SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Instruments</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
                <value>
                    <fullName>Zhermack</fullName>
                </value>
                <value>
                    <fullName>VDW</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Leader_with_10_years_experience__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Senior Academic, Political or Industry Leader with 10+ years experience in dentistry/healthcare/science</inlineHelpText>
        <label>Senior Leader with &gt;10 years experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocialMediaInfluencer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>KOLs who make regular posts about dental topics on their preferred social media channels and generate followings of engaged fellow dental professionals who pay close attention to their views/content. These are typically influencers who have between 1,000 and 40,000 followers on a single social platform.</inlineHelpText>
        <label>Social Media Influencer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thought_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thought Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier1_Criteria__c</fullName>
        <formula>IF(Senior_Leader_with_10_years_experience__c = TRUE,1,0) +  IF(Published_6_in_peer_reviewed_or_Lab_Te__c=TRUE,1,0)+IF( President_or_member_of_a_board_of_direct__c =TRUE,1,0)+IF( Dean_senior_university_administator_or__c =TRUE,1,0)+IF( Lectured_5_at_dental_meetings__c =TRUE,1,0)+IF( Board_of_directors_of_a_Fortune_500__c =TRUE,1,0)+IF( Member_national_international_think_tank__c =TRUE,1,0)+IF( X1_patents_in_a_related_field__c =TRUE,1,0)+IF( science_and_technology_product_dev__c =TRUE,1,0)+IF( Master_Technician_Lab_Owne__c =TRUE,1,0)+IF( Owner_Director_Practice_Consulting_Co__c = TRUE, 1,0)+IF( Digital_Experience_Advanced__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier1 Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier2_Criteria__c</fullName>
        <formula>IF( More_than_5_years_experience__c = TRUE,1,0)+IF( Lectured_10_times_in_prior_5_years__c = TRUE,1,0)+IF( Director_or_similar_in_area_of_expertise__c =TRUE,1,0)+IF( Published_2_5_articles_in_past_10_years__c =TRUE,1,0)+IF( Professor_Assoc_Professor_at_distinguish__c =TRUE,1,0)+IF( Owner_dental_company_Tier2__c =TRUE,1,0)+IF( Certified_dental_technician__c =TRUE,1,0)+IF( Clinical_decision_maker__c =TRUE,1,0)+IF( Hygienist_with_5_years_experience__c =TRUE,1,0)+IF( Hygienist_with_director_level_experience__c =TRUE,1,0)+IF(  Dental_Hygiene_Faculty_Position_Natiojna__c  =TRUE,1,0)+ IF( Committee_Chair_of_a_prof_org__c =TRUE,1,0)+IF( Digital_Experience_Trainer__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier2 Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier3_Criteria__c</fullName>
        <formula>IF( Owner_Practice_Tier3__c =TRUE,1,0)+IF( Clinician_or_scientist_with_2_to_5_years__c =TRUE,1,0)+IF( Associate_or_Assistant_Professor__c =TRUE,1,0)+IF( Dental_Hygiene_Faculty_Position__c =TRUE,1,0) + IF( Lectured_5_times_in_prior_5_years__c =TRUE,1,0) + IF( Responsible_of_Education__c =TRUE,1,0) +IF( Digital_Experience__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier3 Criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Help__c</fullName>
        <description>A field used to copy information from formula field &quot;Tier__c&quot; to a text field upon modification or creation of record. This field is needed to be used when pre-setting values in Quick Actions for related Expert Contract</description>
        <label>Tier Help</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>IF( Not_a_Healthcare_Professional__c, &quot;NON-HEALTHCARE PROVIDER&quot;,
IF( Tier1_Criteria__c &gt;3,&quot;TIER 1&quot;, IF( Tier2_Criteria__c &gt;2,&quot;TIER 2&quot;,IF( Tier3_Criteria__c&gt;0 ,&quot;TIER 3&quot;,&quot;NO TIER INFO ADDED&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Train_the_Trainer_Educator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TtT Educator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Center__c</fullName>
        <label>Treatment Centers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teneo</fullName>
                </value>
                <value>
                    <fullName>Sinius</fullName>
                </value>
                <value>
                    <fullName>Sinius TS</fullName>
                </value>
                <value>
                    <fullName>Sinius CS</fullName>
                </value>
                <value>
                    <fullName>Intego TS</fullName>
                </value>
                <value>
                    <fullName>Intego CS</fullName>
                </value>
                <value>
                    <fullName>Intego Pro TS</fullName>
                </value>
                <value>
                    <fullName>Intego Pro CS</fullName>
                </value>
                <value>
                    <fullName>Intego Turn</fullName>
                </value>
                <value>
                    <fullName>Vionex</fullName>
                </value>
                <value>
                    <fullName>C-Generation</fullName>
                </value>
                <value>
                    <fullName>M-Generation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TtT_trained_speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TtT trained speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium: Institut national d&apos;assurance maladie-invalidite</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estiona: Terviseaneti registrid</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France: RPPS-Repertoire Partage des Professionnels de Sante</fullName>
                </value>
                <value>
                    <fullName>Germany: LANR-Lifelong Physician Number</fullName>
                </value>
                <value>
                    <fullName>Italy: Codice fiscale</fullName>
                </value>
                <value>
                    <fullName>Latvia: LV VM Veselibas inspekcija</fullName>
                </value>
                <value>
                    <fullName>Lithuania: VALSTYBINE AKREDITAVIMO SVEIKATOR PRIEXIUROS</fullName>
                </value>
                <value>
                    <fullName>Netherland: BIG-register</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland: GLN/EAN</fullName>
                </value>
                <value>
                    <fullName>UK: GMC-General Medical Council</fullName>
                </value>
                <value>
                    <fullName>US: NPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VDW_Specialties__c</fullName>
        <label>VDW Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VDW Endo System</fullName>
                </value>
                <value>
                    <fullName>Reciproc</fullName>
                </value>
                <value>
                    <fullName>Reciproc Blue</fullName>
                </value>
                <value>
                    <fullName>R-Pilot</fullName>
                </value>
                <value>
                    <fullName>Mtwo</fullName>
                </value>
                <value>
                    <fullName>FlexMaster</fullName>
                </value>
                <value>
                    <fullName>Eddy</fullName>
                </value>
                <value>
                    <fullName>VDW Ultra</fullName>
                </value>
                <value>
                    <fullName>Guttafushion</fullName>
                </value>
                <value>
                    <fullName>BeeFill 2 in 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_FMV_Exception__c</fullName>
        <inlineHelpText>Checked if a valid FMV exception exists</inlineHelpText>
        <label># Valid  FMV Exceptions</label>
        <summaryFilterItems>
            <field>FMV_Exception_request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>FMV_Exception_request__c.KOL_information__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VdwKol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VDW KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_patents_in_a_related_field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1+ patents in a related field</inlineHelpText>
        <label>1+ patents in a related field</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>